--- a/v/latest/index.html
+++ b/v/latest/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Kapil Shah" />
   <meta name="dcterms.date" content="2022-09-18" />
   <meta name="keywords" content="markdown, publishing, manubot" />
-  <title>CEE498 DS - Data Science for CEE - Fall 2022</title>
+  <title>manuscript</title>
   <style>
     code{white-space: pre-wrap;}
     span.smallcaps{font-variant: small-caps;}
@@ -108,10 +108,10 @@
   Suggest improvements at https://github.com/manubot/manubot/blob/main/manubot/process/header-includes-template.html
   -->
   <meta name="dc.format" content="text/html" />
-  <meta name="dc.title" content="CEE498 DS - Data Science for CEE - Fall 2022" />
-  <meta name="citation_title" content="CEE498 DS - Data Science for CEE - Fall 2022" />
-  <meta property="og:title" content="CEE498 DS - Data Science for CEE - Fall 2022" />
-  <meta property="twitter:title" content="CEE498 DS - Data Science for CEE - Fall 2022" />
+  <meta name="dc.title" content="" />
+  <meta name="citation_title" content="" />
+  <meta property="og:title" content="" />
+  <meta property="twitter:title" content="" />
   <meta name="dc.date" content="2022-09-18" />
   <meta name="citation_publication_date" content="2022-09-18" />
   <meta name="dc.language" content="en-US" />
@@ -122,25 +122,22 @@
   <meta name="citation_technical_report_institution" content="Manubot" />
   <meta name="citation_author" content="Amirthavarshini Muraleetharan" />
   <meta name="citation_author_institution" content="Department of CEE, University of Illinois Urbana Champaign" />
-  <meta name="citation_author_orcid" content="XXXX-XXXX-XXXX-XXXX" />
-  <meta name="twitter:creator" content="@NIL" />
+  <meta name="citation_author_orcid" content="677-010-487" />
   <meta name="citation_author" content="Thomas Ngare" />
   <meta name="citation_author_institution" content="Department of CEE, University of Illinois Urbana Champaign" />
-  <meta name="citation_author_orcid" content="XXXX-XXXX-XXXX-XXXX" />
-  <meta name="twitter:creator" content="@johndoe" />
+  <meta name="citation_author_orcid" content="652-601-317" />
   <meta name="citation_author" content="Kapil Shah" />
   <meta name="citation_author_institution" content="Department of CEE, University of Illinois Urbana Champaign" />
-  <meta name="citation_author_orcid" content="XXXX-XXXX-XXXX-XXXX" />
-  <meta name="twitter:creator" content="@shkapil12295" />
+  <meta name="citation_author_orcid" content="668-376-620" />
   <link rel="canonical" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta property="og:url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta property="twitter:url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta name="citation_fulltext_html_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta name="citation_pdf_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/114825548160222be396eba318d76c136a6f8c1c/" />
-  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/114825548160222be396eba318d76c136a6f8c1c/" />
-  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/114825548160222be396eba318d76c136a6f8c1c/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/02deb4269c2caad12e8b1f0c20b4fec47a54c2f0/" />
+  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/02deb4269c2caad12e8b1f0c20b4fec47a54c2f0/" />
+  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/02deb4269c2caad12e8b1f0c20b4fec47a54c2f0/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -156,53 +153,42 @@
   </style>
 </head>
 <body>
-<header id="title-block-header">
-<h1 class="title">CEE498 DS - Data Science for CEE - Fall 2022</h1>
-</header>
 <p><small><em>
 This manuscript
-(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/114825548160222be396eba318d76c136a6f8c1c/">permalink</a>)
+(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/02deb4269c2caad12e8b1f0c20b4fec47a54c2f0/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/114825548160222be396eba318d76c136a6f8c1c">uiceds/cee-492-term-project-fall-2022-jakt@1148255</a>
+from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/02deb4269c2caad12e8b1f0c20b4fec47a54c2f0">uiceds/cee-492-term-project-fall-2022-jakt@02deb42</a>
 on September 18, 2022.
 </em></small></p>
 <h2 id="authors">Authors</h2>
 <ul>
 <li><p><strong>Amirthavarshini Muraleetharan</strong><br>
 <img src="images/orcid.svg" class="inline_icon" alt="ORCID icon" />
-<a href="https://orcid.org/XXXX-XXXX-XXXX-XXXX">XXXX-XXXX-XXXX-XXXX</a>
+<a href="https://orcid.org/677-010-487">677-010-487</a>
 · <img src="images/github.svg" class="inline_icon" alt="GitHub icon" />
-<a href="https://github.com/amirthavarshini246">amirthavarshini246</a>
-· <img src="images/twitter.svg" class="inline_icon" alt="Twitter icon" />
-<a href="https://twitter.com/NIL">NIL</a><br>
+<a href="https://github.com/amirthavarshini246">amirthavarshini246</a><br>
 <small>
 Department of CEE, University of Illinois Urbana Champaign
 </small></p></li>
 <li><p><strong>Thomas Ngare</strong><br>
 <img src="images/orcid.svg" class="inline_icon" alt="ORCID icon" />
-<a href="https://orcid.org/XXXX-XXXX-XXXX-XXXX">XXXX-XXXX-XXXX-XXXX</a>
+<a href="https://orcid.org/652-601-317">652-601-317</a>
 · <img src="images/github.svg" class="inline_icon" alt="GitHub icon" />
-<a href="https://github.com/thomasNg">thomasNg</a>
-· <img src="images/twitter.svg" class="inline_icon" alt="Twitter icon" />
-<a href="https://twitter.com/johndoe">johndoe</a><br>
+<a href="https://github.com/thomasNg">thomasNg</a><br>
 <small>
 Department of CEE, University of Illinois Urbana Champaign
 </small></p></li>
 <li><p><strong>Kapil Shah</strong><br>
 <img src="images/orcid.svg" class="inline_icon" alt="ORCID icon" />
-<a href="https://orcid.org/XXXX-XXXX-XXXX-XXXX">XXXX-XXXX-XXXX-XXXX</a>
+<a href="https://orcid.org/668-376-620">668-376-620</a>
 · <img src="images/github.svg" class="inline_icon" alt="GitHub icon" />
-<a href="https://github.com/kapilrs2">kapilrs2</a>
-· <img src="images/twitter.svg" class="inline_icon" alt="Twitter icon" />
-<a href="https://twitter.com/shkapil12295">shkapil12295</a><br>
+<a href="https://github.com/kapilrs2">kapilrs2</a><br>
 <small>
 Department of CEE, University of Illinois Urbana Champaign
 </small></p></li>
 </ul>
 <h2 class="page_break_before" id="abstract">Abstract</h2>
-<p><strong>ABCD</strong></p>
-<p><span class="semibold">“A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure”</span></p>
-<p>Amirthavarshini Muraleetharan1, Kapil Shah2, Thomas Ngare Matiki3</p>
+<p><strong>A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure</strong></p>
 <p>A nationwide dataset of road construction and closure events, including data from all 49 US states is chosen for the project. The roadwork included in this dataset’s construction events ranges from minor paving repairs to significant undertakings that might take months to complete. Several APIs that provide streaming traffic incident (or event) data are used to collect the data between January 2016 and December 2021. These APIs transmit traffic information gathered by several organizations, including the US and state departments of transportation, law enforcement organizations, traffic cameras, and traffic sensors embedded in the road networks. The number of construction and shutdown records in this dataset currently stands at roughly 6.2 million.
 In general, this dataset can be used for a wide range of applications, including the prediction of short- and long-term road construction, the prediction of road closures, the study of the life cycle of road construction, the development of insights to help city planners choose construction sites wisely with the most negligible negative impact on traffic flow, and the investigation of the influence of precipitation or other environmental stimuli on the need for road work. The dataset is being updated on an annual basis. The data will be obtained from US Road Construction and Closures (2016 - 2021), Kaggle, and it is available in CSV format. Presently, the dataset contains 6,170,627 observations comprising of features like Construction severity, Latitude and longitude, Precipitation, Traffic signal and many such taking a total of 47 columns. Table 1 elaborates the specifics of this data set.</p>
 <p>Using this dataset, a machine learning model will be developed to predict road closure events, given inputs of pertinent features as mentioned in the below Table 1. measurements from pertinent features that will be determined in this study. The developed algorithm will be tested on about 20% of the total samples, and validated with another 20% of the total samples, to be made suitable for real-time applications. The proposed algorithm will have the potential to estimate the likelihood that every road segment satisfying certain requirement will be is closed or open, such that it can be employed in mobile maps (like Google maps). Whenever the likelihood of a closure event exceeds a predetermined threshold, customer can be notified to find the efficient route. For mapping applications, this algorithm can it will automatically update maps further add to its real time monitoring.</p>
@@ -210,100 +196,6 @@ In general, this dataset can be used for a wide range of applications, including
 <div id="tbl:bowling-scores" class="tablenos">
 <table id="tbl:bowling-scores">
 <caption><span>Table 1:</span> Description of undertaking dataset.
-</caption>
-<thead>
-<tr class="header">
-<th style="text-align: left;"><em>Features</em></th>
-<th style="text-align: center;">Description</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td style="text-align: left;">ID</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">Severity</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: left;">Start and End Time</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">End Time</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: left;">Latitude and Longitude</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">Distance</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: left;">Street Details</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">Address Details</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: left;">Time zone</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">Weather</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: left;">Temperature, Wind, Humidity, and Pressure</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">Visibility</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: left;">Wind Direction and Speed</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">Precipitation and Weather condition</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: left;">Amenity</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">Bump and Crossing</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: left;">Give way, Junction, railway</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">Exit, Roundabout, Station, Stop</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: left;">Traffic Details</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: left;">Light Details</td>
-<td style="text-align: center;"></td>
-</tr>
-</tbody>
-</table>
-</div>
-<div id="tbl:bowling-scores" class="tablenos">
-<table id="tbl:bowling-scores">
-<caption><span>Table 2:</span> Description of undertaking dataset.
 </caption>
 <colgroup>
 <col style="width: 54%" />
@@ -486,7 +378,7 @@ Manubot plugins provide easier, more convenient visualization of and navigation 
 <p>Figure <a href="#fig:wide-image">2</a></p>
 <p>Figure <a href="#fig:tall-image">3</a></p>
 <p>Figure <a href="#fig:vector-image">4</a></p>
-<p>Table <a href="#tbl:bowling-scores">3</a></p>
+<p>Table <a href="#tbl:bowling-scores">2</a></p>
 <p>Equation <a href="#eq:regular-equation">1</a></p>
 <p>Equation <a href="#eq:long-equation">2</a></p>
 <h2 id="quotes-and-code">Quotes and code</h2>
@@ -540,7 +432,7 @@ White background specified to serve as a backdrop for transparent sections of th
 <h2 id="tables">Tables</h2>
 <div id="tbl:bowling-scores" class="tablenos">
 <table id="tbl:bowling-scores">
-<caption><span>Table 3:</span> A table with a top caption and specified relative column widths.
+<caption><span>Table 2:</span> A table with a top caption and specified relative column widths.
 </caption>
 <thead>
 <tr class="header">
@@ -578,7 +470,7 @@ White background specified to serve as a backdrop for transparent sections of th
 </div>
 <div id="tbl:constant-digits" class="tablenos">
 <table id="tbl:constant-digits">
-<caption><span>Table 4:</span> A table too wide to fit within page.
+<caption><span>Table 3:</span> A table too wide to fit within page.
 </caption>
 <colgroup>
 <col style="width: 5%" />
@@ -614,9 +506,9 @@ White background specified to serve as a backdrop for transparent sections of th
 </tbody>
 </table>
 </div>
-<div id="tbl:e365f6f4-4bfe-46e6-8f45-aaa2c0993382" class="tablenos">
+<div id="tbl:16314284-9761-4229-8676-50b3a6f75826" class="tablenos">
 <table id="tbl:">
-<caption><span>Table 5:</span> A table with merged cells using the <code>attributes</code> plugin.
+<caption><span>Table 4:</span> A table with merged cells using the <code>attributes</code> plugin.
 </caption>
 <thead>
 <tr class="header">
