--- a/v/latest/index.html
+++ b/v/latest/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Kapil Shah" />
   <meta name="dcterms.date" content="2022-09-18" />
   <meta name="keywords" content="markdown, publishing, manubot" />
-  <title>manuscript</title>
+  <title>A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure</title>
   <style>
     code{white-space: pre-wrap;}
     span.smallcaps{font-variant: small-caps;}
@@ -108,10 +108,10 @@
   Suggest improvements at https://github.com/manubot/manubot/blob/main/manubot/process/header-includes-template.html
   -->
   <meta name="dc.format" content="text/html" />
-  <meta name="dc.title" content="" />
-  <meta name="citation_title" content="" />
-  <meta property="og:title" content="" />
-  <meta property="twitter:title" content="" />
+  <meta name="dc.title" content="A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure" />
+  <meta name="citation_title" content="A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure" />
+  <meta property="og:title" content="A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure" />
+  <meta property="twitter:title" content="A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure" />
   <meta name="dc.date" content="2022-09-18" />
   <meta name="citation_publication_date" content="2022-09-18" />
   <meta name="dc.language" content="en-US" />
@@ -135,9 +135,9 @@
   <meta name="citation_fulltext_html_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/" />
   <meta name="citation_pdf_url" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
   <link rel="alternate" type="application/pdf" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/manuscript.pdf" />
-  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/02deb4269c2caad12e8b1f0c20b4fec47a54c2f0/" />
-  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/02deb4269c2caad12e8b1f0c20b4fec47a54c2f0/" />
-  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/02deb4269c2caad12e8b1f0c20b4fec47a54c2f0/manuscript.pdf" />
+  <link rel="alternate" type="text/html" href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/a9c40593963a7f844c7c0e96baac81e099d52d37/" />
+  <meta name="manubot_html_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/a9c40593963a7f844c7c0e96baac81e099d52d37/" />
+  <meta name="manubot_pdf_url_versioned" content="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/a9c40593963a7f844c7c0e96baac81e099d52d37/manuscript.pdf" />
   <meta property="og:type" content="article" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/png" sizes="192x192" href="https://manubot.org/favicon-192x192.png" />
@@ -153,11 +153,14 @@
   </style>
 </head>
 <body>
+<header id="title-block-header">
+<h1 class="title">A Machine Learning Based Approach, For Predicting Road Closure Events, Given Data of the US Road Construction and Closure</h1>
+</header>
 <p><small><em>
 This manuscript
-(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/02deb4269c2caad12e8b1f0c20b4fec47a54c2f0/">permalink</a>)
+(<a href="https://uiceds.github.io/cee-492-term-project-fall-2022-jakt/v/a9c40593963a7f844c7c0e96baac81e099d52d37/">permalink</a>)
 was automatically generated
-from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/02deb4269c2caad12e8b1f0c20b4fec47a54c2f0">uiceds/cee-492-term-project-fall-2022-jakt@02deb42</a>
+from <a href="https://github.com/uiceds/cee-492-term-project-fall-2022-jakt/tree/a9c40593963a7f844c7c0e96baac81e099d52d37">uiceds/cee-492-term-project-fall-2022-jakt@a9c4059</a>
 on September 18, 2022.
 </em></small></p>
 <h2 id="authors">Authors</h2>
@@ -506,7 +509,7 @@ White background specified to serve as a backdrop for transparent sections of th
 </tbody>
 </table>
 </div>
-<div id="tbl:16314284-9761-4229-8676-50b3a6f75826" class="tablenos">
+<div id="tbl:1066600b-dcff-42cf-a7c3-51c060a4a720" class="tablenos">
 <table id="tbl:">
 <caption><span>Table 4:</span> A table with merged cells using the <code>attributes</code> plugin.
 </caption>
